--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "@nuxtjs/axios": "^5.3.1",
     "axios": "^0.16.2",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.18.2",
+    "compression": "^1.7.2",
+    "cors": "^2.8.4",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "getlorem": "^1.0.1",
+    "helmet": "^3.12.0",
     "node-sass": "^4.9.0",
     "nuxt": "^1.4.0",
+    "popmotion": "^8.1.22",
     "sass-loader": "^7.0.1",
     "source-map-support": "^0.4.15",
     "stylus": "^0.54.5",
@@ -29,6 +34,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^22.4.3",
     "backpack-core": "^0.4.1",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
@@ -37,6 +43,9 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "jest": "^22.4.3",
+    "jest-vue-preprocessor": "^1.4.0",
+    "vue-test-utils": "^1.0.0-beta.11"
   }
 }
