--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "build": "nuxt build && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
+    "test": "ava --verbose",
+    "test-serial": "ava --serial --verbose",
+    "test-watch": "ava --verbose --watch",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.1",
+    "@vue/test-utils": "^1.0.0-beta.15",
     "axios": "^0.16.2",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
@@ -33,9 +37,13 @@
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
+    "ava": "^0.25.0",
+    "axios-mock-adapter": "^1.15.0",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "^22.4.3",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-register": "^6.26.0",
     "backpack-core": "^0.4.1",
+    "browser-env": "^3.2.5",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
@@ -44,8 +52,70 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "jest": "^22.4.3",
-    "jest-vue-preprocessor": "^1.4.0",
+    "jsdom": "^11.10.0",
+    "require-extension-hooks": "^0.3.2",
+    "require-extension-hooks-babel": "^0.1.1",
+    "require-extension-hooks-vue": "^1.0.0",
     "vue-test-utils": "^1.0.0-beta.11"
+  },
+  "ava": {
+    "require": [
+      "babel-polyfill",
+      "./test/helpers/setup.js"
+    ],
+    "snapshotDir": "./test/unit/snapshot",
+    "babel": {
+      "plugins": [
+        "transform-runtime",
+        [
+          "module-resolver",
+          {
+            "root": [
+              "./"
+            ],
+            "alias": {
+              "~/components": "./components",
+              "~/pages": "./pages",
+              "~/nuxt.config.js": "./nuxt.config.js"
+            }
+          }
+        ]
+      ],
+      "presets": [
+         [
+           "env"
+         ], [
+           "vue-app"
+         ]
+      ],
+      "env": {
+        "test": {
+          "presets": [
+            [
+              "env",
+              {
+                "targets": {
+                  "node": ["current", {"modules": false}],
+                  "browser": "current"
+                }
+              }
+            ]
+          ]
+        }
+      }
+    }
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^vue$": "vue/dist/vue.common.js"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "vue"
+    ],
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
+      ".*\\.(vue)$": "<rootdir>/node_modules/vue-jest"
+    }
   }
 }
