--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "source-map-support": "^0.4.15",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "vue-observe-visibility": "^0.3.1",
     "vuetify": "^1.0.0-beta.1",
+    "vuex": "^3.0.1",
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
