--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue-observe-visibility": "^0.3.1",
     "vuetify": "^1.0.0-beta.1",
     "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.2",
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
