--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "build": "nuxt build && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
-    "test": "jest --config test/unit/jest.config.js",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "postinstall": "npm i -g jest"
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.1",
