--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nuxt build && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.1",
