--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "build": "nuxt build && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore"
+    "test": "jest",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.1",
-    "@vue/test-utils": "^1.0.0-beta.15",
     "axios": "^0.16.2",
-    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
@@ -37,15 +36,17 @@
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.53",
+    "@babel/preset-env": "^7.0.0-beta.53",
     "@types/jest": "^22.2.3",
+    "@vue/test-utils": "^1.0.0-beta.20",
     "ava": "^0.25.0",
     "axios-mock-adapter": "^1.15.0",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "^22.4.3",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0",
+    "babel-jest": "^22.4.4",
+    "babel-plugin-dynamic-import-node": "^2.0.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-jest": "^23.2.0",
     "backpack-core": "^0.4.1",
     "browser-env": "^3.2.5",
     "eslint": "^4.3.0",
@@ -62,8 +63,6 @@
     "open-browser-webpack-plugin": "0.0.5",
     "require-extension-hooks": "^0.3.2",
     "require-extension-hooks-babel": "^0.1.1",
-    "require-extension-hooks-vue": "^1.0.0",
-    "vue-jest": "^2.5.0",
-    "vue-test-utils": "^1.0.0-beta.11"
+    "require-extension-hooks-vue": "^1.0.0"
   }
 }
