--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-eslint": "^7.2.3",
     "babel-jest": "^22.4.4",
     "babel-plugin-dynamic-import-node": "^2.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-jest": "^23.2.0",
     "backpack-core": "^0.4.1",
