--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
     "test": "jest --config test/unit/jest.config.js",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ./test/unit/coverage",
     "postinstall": "npm i -g jest"
   },
   "dependencies": {
