--- a/package.json
+++ b/package.json
@@ -5,67 +5,37 @@
   "author": "gangsthub <bravo@graficos.net>",
   "private": true,
   "scripts": {
-    "dev": "backpack dev",
-    "build": "nuxt build && backpack build",
-    "start": "cross-env NODE_ENV=production node build/main.js",
-    "precommit": "npm run lint",
-    "test": "jest --config test/unit/jest.config.js",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ./test/unit/coverage",
-    "postinstall": "npm i -g jest"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.1",
-    "@vue/test-utils": "^1.0.0-beta.15",
-    "axios": "^0.16.2",
-    "babel-polyfill": "^6.26.0",
+    "@babel/runtime": "^7.3.1",
+    "@nuxtjs/babel-preset-app": "^0.8.0",
+    "@nuxtjs/pwa": "^2.6.0",
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
-    "getlorem": "^1.0.1",
     "helmet": "^3.12.0",
-    "node-sass": "^4.9.0",
-    "nuxt": "^1.4.0",
+    "nuxt": "^2.4.0",
     "popmotion": "^8.1.22",
-    "sass-loader": "^7.0.1",
-    "source-map-support": "^0.4.15",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
     "vue-observe-visibility": "^0.3.1",
-    "vuetify": "^1.0.0-beta.1",
+    "vuetify": "^1.3.14",
+    "vuetify-loader": "^1.0.8",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.2",
-    "webpack-node-externals": "^1.7.2"
+    "vuex-persistedstate": "^2.5.2"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.3",
-    "ava": "^0.25.0",
-    "axios-mock-adapter": "^1.15.0",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^22.4.3",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0",
-    "backpack-core": "^0.4.1",
-    "browser-env": "^3.2.5",
-    "eslint": "^4.3.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "jest-serializer-vue": "^1.0.0",
-    "jest-vue-preprocessor": "^1.4.0",
-    "jsdom": "^11.10.0",
-    "open-browser-webpack-plugin": "0.0.5",
-    "require-extension-hooks": "^0.3.2",
-    "require-extension-hooks-babel": "^0.1.1",
-    "require-extension-hooks-vue": "^1.0.0",
-    "vue-jest": "^2.5.0",
-    "vue-test-utils": "^1.0.0-beta.11"
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "babel-preset-vue-app": "^2.0.0",
+    "node-sass": "^4.11.0",
+    "nodemon": "^1.18.9",
+    "sass-loader": "^7.1.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   }
 }
